# Cpp_Kosmos

./: CMakeLists.txt  DEBUG.h  Main.cpp  Man.cpp  Man.h  Person.cpp  Person.h  Planet.cpp  Planet.h  SolarSystem.cpp  SolarSystem.h  SpaceShip.cpp  SpaceShip.h  Woman.cpp  Woman.h
